# TA_BlueHarvest

./: .gitignore  README.md  dist.env  entrypoint.sh  prod.docker-compose.yml  pyproject.toml
src/: main.py
src/api/auth/: __init__.py
src/api/responses/: __init__.py  accounts.py  generic.py  system.py  transactions.py  wallets.py
src/api/routers/: __init__.py  accounts.py  system.py
src/api/routers/crud/: __init__.py  accounts.py  transactions.py  wallets.py
src/api/schema/: __init__.py  accounts.py  generic.py  transactions.py  wallets.py
src/api/services/: __init__.py  accounts.py  transactions.py  wallets.py
src/api/tasks/: __init__.py  accounts.py
src/config/: __init__.py  api.py  auth.py  databases.py
src/databases/migrations/: 2025_01_19_161155_create_accounts_table.py  2025_01_19_161156_create_wallets_table.py  2025_01_19_161157_create_transactions_table.py
src/databases/models/: __init__.py  accounts.py  transactions.py  wallets.py
src/databases/observers/: accounts.py  wallets.py
src/databases/seeds/: accounts_table_seeder.py
src/frontend/templates/: base.html
src/frontend/templates/pages/: index.html
tests/: __init__.py  test_main.py
